--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
   "devDependencies": {
     "del": "~3.0.0",
     "eslint": "^5.16.0",
-    "glob": "^7.1.3",
-    "gulp": "^4.0.0",
+    "glob": "^7.1.6",
+    "gulp": "^4.0.2",
     "gulp-concat": "~2.6.1",
     "gulp-eslint": "~5.0.0",
     "gulp-filter": "^5.1.0",
     "gulp-mocha": "~6.0.0",
     "gulp-rename": "~1.4.0",
     "gulp-sass": "~4.0.2",
-    "gulp-sourcemaps": "~2.6.4",
-    "gulp-uglify": "~3.0.1",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "~3.0.8",
     "gulp-watch": "~5.0.1",
     "gulp-wrap-js": "~0.4.1",
@@ -57,7 +57,7 @@
     "mocha": "~5.2.0",
     "mocha-jsdom": "~2.0.0",
     "should": "^13.2.3",
-    "sinon": "^6.1.6",
-    "yargs": "^12.0.2"
+    "sinon": "^6.3.5",
+    "yargs": "^12.0.5"
   }
 }
